# pythonTaglib

./: README.md  main.py  setup.cfg  setup.py
pytag/: __init__.py  _utils.py
